i include abstracts now apparently

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -7,6 +7,25 @@
         month = feb,
           eid = {arXiv:2602.12331},
         pages = {arXiv:2602.12331},
+     abstract = "{Polycyclic aromatic hydrocarbons (PAHs) are responsible for a variety of
+        near- and mid-infrared spectral features in Galactic and
+        extragalactic sources. A feature at 1.05 $μ$m arising from
+        electronic transitions in PAH cations is predicted by laboratory
+        experiments but has never been observationally confirmed. We
+        conduct a dedicated search for this feature in absorption on a
+        highly-extinguished sight line toward BD+40 4223, a blue
+        supergiant in Cyg OB2, using the TripleSpec spectrograph at
+        Palomar Observatory. We place a $5σ$ upper limit on the feature
+        strength of $∆τ_{1.05}/A_{V} < 5.6 \times10^{-3}$, ruling out
+        theoretical estimates with $> 10σ$ significance. We constrain
+        the effective temperature of BD+40 4223 to be
+        $\log_{10}\left(T_{\rm eff}\right)=4.41\pm0.03$ and infer that
+        it is veiled by $6.39\pm0.05$ magnitudes of visual extinction,
+        consistent with but more constraining than previous
+        determinations. As dust on the sight line toward BD+40 4223
+        appears typical of the diffuse interstellar medium, this non-
+        detection challenges existing models of PAH material properties
+        and/or charge distribution.}",
           doi = {10.48550/arXiv.2602.12331},
 archivePrefix = {arXiv},
        eprint = {2602.12331},
